fixed bug where js required prompt is invisible

--- a/styles/main.css
+++ b/styles/main.css
@@ -97,7 +97,7 @@ body, html {
     display: flex;
     flex-wrap: wrap;
     justify-content:left;
-    opacity: 0;
+    opacity: 1;
     transition: opacity 300ms ease-in-out;
 }
 
